D603345-4795 compatibility with Java 11 and Readme.md updates